--- a/app/src/main/res/layout/activity_main2__quiz1.xml
+++ b/app/src/main/res/layout/activity_main2__quiz1.xml
@@ -139,7 +139,7 @@
         android:layout_marginBottom="17dp"
         android:contentDescription="@string/description"
         android:gravity="center"
-        android:text="@string/question_content1"
+
         android:textColor="@android:color/background_light"
         android:textSize="24sp" />
 
@@ -193,9 +193,8 @@
         android:layout_width="381dp"
         android:layout_height="144dp"
         android:layout_below="@+id/bottom_bar"
-        android:layout_alignStart="@+id/bottom_bar"
-        android:layout_marginTop="15dp">
-
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="16dp">
         <RadioButton
             android:id="@+id/answer1"
             android:layout_width="380dp"
