--- a/app/src/main/res/layout/activity_main2__quiz3.xml
+++ b/app/src/main/res/layout/activity_main2__quiz3.xml
@@ -8,15 +8,6 @@
     tools:context=".Main2Activity_Quiz3">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description"
-        app:srcCompat="@drawable/hammurabi"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="240dp" />
-
-    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,12 +19,65 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_marginBottom="64dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="178dp"
         android:gravity="center"
         android:text="@string/adios"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="171dp" />
+
+    <TextView
+        android:id="@+id/tv_jugador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="155dp"
+        android:layout_marginLeft="155dp"
+        android:layout_marginBottom="382dp"
+        android:text="TextView"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/tv_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="166dp"
+        android:layout_marginLeft="166dp"
+        android:layout_marginBottom="317dp"
+        android:text="TextView"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tv_titulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginTop="108dp"
+        android:text="TextView"
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/btn_home"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="39dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="@string/btn_home"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp" />
 </RelativeLayout>
