--- a/app/src/main/res/layout/activity_main2__quiz3.xml
+++ b/app/src/main/res/layout/activity_main2__quiz3.xml
@@ -37,7 +37,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="155dp"
         android:layout_marginLeft="155dp"
-        android:layout_marginBottom="382dp"
+        android:layout_marginBottom="271dp"
         android:text="TextView"
         android:textColor="@android:color/background_light"
         android:textSize="24sp" />
@@ -49,9 +49,9 @@
         android:layout_above="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="166dp"
-        android:layout_marginLeft="166dp"
-        android:layout_marginBottom="317dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginLeft="168dp"
+        android:layout_marginBottom="233dp"
         android:text="TextView"
         android:textColor="@android:color/background_light"
         android:textSize="18sp" />
@@ -78,6 +78,34 @@
         android:layout_marginBottom="39dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/btn_home"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tv_correctas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="167dp"
+        android:layout_marginLeft="167dp"
+        android:layout_marginBottom="386dp"
+        android:text="TextView"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tv_incorrectas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="169dp"
+        android:layout_marginLeft="169dp"
+        android:layout_marginBottom="343dp"
+        android:text="TextView"
         android:textColor="@android:color/background_light"
         android:textSize="18sp" />
 </RelativeLayout>
